styles/article.css
		u:-webkit-scrollbar {
			display: none;
		}

		.warning {
			color:red;
		}
		#backprofilepic {
			border-radius: 50%;
			height: 4em;
		}
		#sidebar {
			padding: 1em;
			text-align: left;
			line-height: 2em;
		}
		.date {
			color: gray;
			font-style: italic;
		}
		.nostyle {
			color: black;
			text-decoration: none;
		}
		table {
			margin: 0 auto;
			border-collapse: collapse;
			margin-bottom: 1em;
		}
		table, th, td {
			border: 1px solid black;
		}
		th, td {
			padding: .5em;
		}
		#scifairimg {
			object-fit: scale-down;
			width: 100%;
			max-width: 40em;
		}
		.graph {
			object-fit: contain;
			width: 100%;
			max-width: 30em;
		}
		.graphboxwrapper {
			text-align: center;
		}
		.graphbox {
			display:inline-block;
			padding: .75em;
			border: 1px solid lightgrey;
		}
		.slider {
			object-fit: contain;
			width: 100%;
			max-width: 34.5em;
		}
		#backprofilepic {
			border-radius: 50%;
			height: 4em;
		}
		#sidebar {
			padding: 1em;
			text-align: left;
			line-height: 2em;
		}
		.nostyle {
			color: black;
			text-decoration: none;
		}

		/* entire container, keeps perspective */
		.flip-container {
			float: left;
			padding-right: 1em;
			padding-bottom: 1em;
			display: inline-block;	
			perspective: 1000px;
		}
		.flip-container, .front, .back {
			border-radius: 50%;
			width: 4em;
			height: 4em;
		}
		/* flip speed goes here */
		.flipper {
			transition: 0.4s;
			transform-style: preserve-3d;
			position: relative;
		}
		/* hide back of pane during swap */
		.front, .back {
			text-align: center;
			backface-visibility: hidden;
			position: absolute;
			top: 0;
			left: 0;	
		}
		/* front pane, placed above back */
		.front {
			z-index: 2;
			/* for firefox 31 */
			transform: rotateY(0deg);
		}
		/* back, initially hidden pane */
		.back {
			line-height:4em;
			transform: rotateY(180deg);
			background-color: lightgrey;
		}
		.back span {
			font-size: 3em;
		}
		@media (min-width: 80em) {
			#backprofilepic {
				height: 8em;
				width: 8em;
			}
			#sidebar {
				position: absolute;
				left: 5em;
				/* distance from left side should = distance from left side of article to the left side of the window divided by two, and then subtract 5em */
				left: calc(calc(calc(50% - 25em) / 2) - 5em);
				top: 5em;
				text-align: center;
				line-height: 0px;
			}
			.flip-container {
				float: none;
				padding: 0px;
			}
			/* flip the pane when hovered */
			.flip-container:hover .flipper, .flip-container.hover .flipper {
				transform: rotateY(180deg);
			}
			.flip-container, .front, .back {
				width: 8em;
				height: 8em;
			}
			.back {
				line-height: 8em;
			}
			.back span {
				font-size: 6em;
			}
		}
		article {
			padding-top: 3.5em;
		}
		article h1:first-of-type {
			line-height: 0px;
		}
		/* this was originally written for the graphs in the mapping afghanistan post */
		article img {
			width: 100%;
		}
		.centeredtext {
			text-align: center;
		}

